[package]
name = "rsts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
chrono = "0.4.43"
image = "0.25.9"
maplibre_native = { version = "0.4.1", features = ["vulkan"] }
num_cpus = "1.17.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tempfile = "3.25.0"
tera = "1.20.1"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
